Small tweaks to enhance mobile view, and override newsletter page's body id so we can fix the ugly white space on wiiiide displays.

--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -117,10 +117,7 @@ button {
 }
 
 .btn-newsletter {
-  &:extend(.w-40, .font-md, .rounded-sm, .border-none, .bg-primary-button, .text-white, .p-2, .pl-3, .pr-3, .uppercase, .font-bold, .appearance-none);
-
-  // Align the button with our inputbox.
-  line-height: normal;
+  &:extend(.md\:w-40, .leading-none, .md\:leading-normal, .font-md, .rounded-sm, .border-none, .bg-primary-button, .text-white, .p-2, .pl-3, .pr-3, .uppercase, .font-bold, .appearance-none);
 
   &:hover,
   &:focus {
